Fix bug where mobile navbar items were not aligned correctly

--- a/csfieldguide/static/scss/_core-variables.scss
+++ b/csfieldguide/static/scss/_core-variables.scss
@@ -14,6 +14,6 @@ $theme-colors: (
     "light":      $light,
     "dark":       $dark
 );
-$navbar-height: 2.5rem;
+$navbar-height: 3rem;
 $nav-pills-link-active-color: $csfg-light;
 $nav-pills-link-active-bg: $csfg-light;
